fix: contrast ration

--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -7,6 +7,7 @@ body
   .hero
     .description
       font-size: 1.4rem
+      color: #333
 
 // hide github nav link
 .repo-link
